--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       }
     </style>
 
-    
+    <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -249,7 +249,7 @@
   </footer>
 </div>
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     </body>
 </html>
 
