--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
     <a >
       
-      <span class="fs-4">我的個人檔案</span>
+      <p class="fs-3 col-md-20">我的個人檔案</p>
     </a>
   </header>
 
