--- a/index.html
+++ b/index.html
@@ -158,19 +158,25 @@
   </symbol>
 </svg>
 
-<div class="col-lg-8 mx-auto p-4 py-md-5">
-  <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
- 
-      
-      <p class="fs-3 col-md-20">我的個人檔案</p>
+<div class=" mx-auto ">
+  <header class="  mb-5 ">
+
+      <div class="">
+        <nav class="navbar navbar-dark bg-primary" aria-label="Dark offcanvas navbar">
+        <a class="navbar-brand" href="#">我的個人檔案</a>
+      </nav>
+
+      </div>
     
   </header>
 
   <main>
     <p class="fs-5 col-md-8">姓名:梁巍瀚</p>
     <p class="fs-5 col-md-8">學號:41171134H</p>
-    <p class="fs-5 col-md-8">生日:2004年4月13日</p>
-    <p class="fs-5 col-md-8">興趣:打羽球</p>
+    <p class="fs-5 col-md-8">生日:2004年4月13日🎂</p>
+    <p class="fs-5 col-md-8">星座:牡羊座♈️</p>
+    <p class="fs-5 col-md-8">興趣:打羽球   🏸</p>
+    <p class="fs-5 col-md-8">備註:雖然我是台南人但我飲料不會點全糖!🥤</p>
 
 
     <hr class="col-3 col-md-2 mb-5">
@@ -178,7 +184,10 @@
     <div class="row g-5">
       <div class="col-md-6">
         <h2 class="text-body-emphasis">學經歷</h2>
-        <h4 class="text-body-emphasis">佳興國小➔下營國中➔港明高中➔台師大</h4>
+        <h5 class="text-body-emphasis">佳興國小➔下營國中➔港明高中➔台師大</h5>
+        <p></p>
+        <p></p>
+        <h3 class="text-body-emphasis">對未來的期望</h3>
         <p>目前就讀於臺師大科技應用與人力資源發展學系學習與科技組，目前對科技的發展和知識感興趣，未來期望能在大學習得一技之長並以此作為找到工作養活自己的本錢。</p>
       </div>
 
