--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
         </ul>
       </div>
     </div>
+    <div class="row g-5">
+      <div class="col-md-6">
+        <h2 class="text-body-emphasis">Javascript 小作品區</h2>
+      </div>
+    </div>
   </main>
 </div>
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
