--- a/HW3/index.html
+++ b/HW3/index.html
@@ -9,18 +9,33 @@
 </head>
 <body>
     <div class="container">
-        <h1>Tip Calculator</h1>
-        <p>Enter the bill amount and tip percentage to calculate the total.</p>
-        <label for="bill">Bill amount:</label>
-        <input type="number" id="bill">
+        <h1>Calculation of the appropriate purchase price for stocks</h1>
+        <p>Enter  the last five dividends to calculate appropriate purchase price.</p>
+        <label for="first dividend">dividend 1:</label>
+        <input type="number" id="first dividend">
         <br/>
-        <label for="tip">Tip percentage:</label>
-        <input type="number" id="tip">
+        <label for="second dividend">dividend 2:</label>
+        <input type="number" id="second dividend">
+        <br/>
+        <label for="third dividend">dividend 3:</label>
+        <input type="number" id="third dividend">
+        <br/>
+        <label for="fourth dividend">dividend 4:</label>
+        <input type="number" id="fourth dividend">
+        <br/>
+        <label for="fifth dividend">dividend 5:</label>
+        <input type="number" id="fifth dividend">
         <br/>
         <button id="calculate">Calculate</button>
         <br/>
-        <label for="total">Total:</label>
-        <span id="total"></span>
+        <label for="cheapprice">low price:</label>
+        <span id="cheapprice"></span>
+        <br/>
+        <label for="reasonableprice">reasonable price:</label>
+        <span id="reasonableprice"></span>
+        <br/>
+        <label for="expensiveprice">high price:</label>
+        <span id="expensiveprice"></span>
 
     </div>
     <script src="index.js"></script>
