--- a/HW3/index.html
+++ b/HW3/index.html
@@ -4,39 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tip Calculator</title>
+    <title>Calculation of the appropriate purchase price for stocks</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1>Calculation of the appropriate purchase price for stocks</h1>
-        <p>Enter  the last five dividends to calculate appropriate purchase price.</p>
-        <label for="first dividend">dividend 1:</label>
-        <input type="number" id="first dividend">
+        <p>Enter the last five dividends to calculate the appropriate purchase price.</p>
+        <label for="first-dividend">dividend 1:</label>
+        <input type="number" id="first-dividend">
         <br/>
-        <label for="second dividend">dividend 2:</label>
-        <input type="number" id="second dividend">
+        <label for="second-dividend">dividend 2:</label>
+        <input type="number" id="second-dividend">
         <br/>
-        <label for="third dividend">dividend 3:</label>
-        <input type="number" id="third dividend">
+        <label for="third-dividend">dividend 3:</label>
+        <input type="number" id="third-dividend">
         <br/>
-        <label for="fourth dividend">dividend 4:</label>
-        <input type="number" id="fourth dividend">
+        <label for="fourth-dividend">dividend 4:</label>
+        <input type="number" id="fourth-dividend">
         <br/>
-        <label for="fifth dividend">dividend 5:</label>
-        <input type="number" id="fifth dividend">
+        <label for="fifth-dividend">dividend 5:</label>
+        <input type="number" id="fifth-dividend">
         <br/>
         <button id="calculate">Calculate</button>
         <br/>
-        <label for="cheapprice">low price:</label>
+        <label for="cheapprice">cheap price:</label>
         <span id="cheapprice"></span>
         <br/>
         <label for="reasonableprice">reasonable price:</label>
         <span id="reasonableprice"></span>
         <br/>
-        <label for="expensiveprice">high price:</label>
+        <label for="expensiveprice">expensive price:</label>
         <span id="expensiveprice"></span>
-
     </div>
     <script src="index.js"></script>
 </body>
