--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div class="row g-5">
       <div class="col-md-6">
         <h2 class="text-body-emphasis">Javascript 小作品區</h2>
-        <a href="https://www.example.com">股票合適購買價格計算</a>
+        <a href="https://liangweihan.github.io/HW3/">股票合適購買價格計算</a>
       </div>
     </div>
   </main>
